<resources>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_helpPackageNameKey">genie-eng:app_pkg_name</string>
    <string name="config_helpPackageNameValue">com.google.android.settings.gphone</string>
    <string name="config_helpIntentExtraKey">EXTRA_PSD_KEYS</string>
    <string name="config_helpIntentNameKey">EXTRA_PSD_VALUES</string>
    <string name="config_feedbackIntentExtraKey">EXTRA_FEEDBACK_PSD_KEYS</string>
    <string name="config_feedbackIntentNameKey">EXTRA_FEEDBACK_PSD_VALUES</string>
    <string name="wifi_fail_to_scan">"Can't scan for networks"</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_passpoint">Passpoint</string>
    <string name="wifi_remembered">Saved</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">IP Configuration Failure</string>
    <string name="wifi_disabled_wifi_failure">WiFi Connection Failure</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_no_internet_no_reconnect">"No Internet Access Detected, won't automatically reconnect."</string>
    <string name="wifi_no_internet">No Internet Access.</string>
    <string name="saved_network">Saved by %1$s</string>
    <string name="connected_via_wfa">Connected via Wi‑Fi assistant</string>
    <string name="connected_via_passpoint">Connected via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="settings_package">com.android.settings</string>
    <string name="certinstaller_package">com.android.certinstaller</string>
    <string name="wifi_connected_no_internet">Connected, no Internet</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_map">Connected (no message access)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_profile_a2dp">Media audio</string>
    <string name="bluetooth_profile_headset">Phone audio</string>
    <string name="bluetooth_profile_opp">File transfer</string>
    <string name="bluetooth_profile_hid">Input device</string>
    <string name="bluetooth_profile_pan">Internet access</string>
    <string name="bluetooth_profile_pbap">Contact sharing</string>
    <string name="bluetooth_profile_pbap_summary">Use for contact sharing</string>
    <string name="bluetooth_profile_pan_nap">Internet connection sharing</string>
    <string name="bluetooth_profile_map">Message Access</string>
    <string name="bluetooth_profile_sap">SIM Access</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected to media audio</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected to phone audio</string>
    <string name="bluetooth_opp_profile_summary_connected">Connected to file transfer server</string>
    <string name="bluetooth_map_profile_summary_connected">Connected to map</string>
    <string name="bluetooth_sap_profile_summary_connected">Connected to SAP</string>
    <string name="bluetooth_opp_profile_summary_not_connected">Not connected to file transfer server</string>
    <string name="bluetooth_hid_profile_summary_connected">Connected to input device</string>
    <string name="bluetooth_pan_user_profile_summary_connected">Connected to device for Internet access</string>
    <string name="bluetooth_pan_nap_profile_summary_connected">Sharing local Internet connection with device</string>
    <string name="bluetooth_pan_profile_summary_use_for">Use for Internet access</string>
    <string name="bluetooth_map_profile_summary_use_for">Use for map</string>
    <string name="bluetooth_sap_profile_summary_use_for">Use for SIM access</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">Use for media audio</string>
    <string name="bluetooth_headset_profile_summary_use_for">Use for phone audio</string>
    <string name="bluetooth_opp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_hid_profile_summary_use_for">Use for input</string>
    <string name="bluetooth_pairing_accept">Pair</string>
    <string name="bluetooth_pairing_accept_all_caps">PAIR</string>
    <string name="bluetooth_pairing_decline">Cancel</string>
    <string name="bluetooth_pairing_will_share_phonebook">Pairing grants access to your contacts and call history when connected.</string>
    <string name="bluetooth_pairing_error_message">"Couldn't pair with %1$s."</string>
    <string name="bluetooth_pairing_pin_error_message">"Couldn't pair with %1$s because of an incorrect PIN or passkey."</string>
    <string name="bluetooth_pairing_device_down_error_message">"Can't communicate with %1$s."</string>
    <string name="bluetooth_pairing_rejected_error_message">Pairing rejected by %1$s.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="process_kernel_label">Android OS</string>
    <string name="data_usage_uninstalled_apps">Removed apps</string>
    <string name="data_usage_uninstalled_apps_users">Removed apps and users</string>
    <string name="tether_settings_title_usb">USB tethering</string>
    <string name="tether_settings_title_wifi">Portable hotspot</string>
    <string name="tether_settings_title_bluetooth">Bluetooth tethering</string>
    <string name="suw_next_button_label">Next</string>
    <string name="date_time_setup_title">Date &amp; time</string>
    <string name="date_time_message">Adjust if needed.</string>
    <string name="date_time_current_date">Date</string>
    <string name="date_time_current_time">Time</string>
    <string name="restore_choice_google_account_label">A backup from the cloud</string>
    <string name="restore_choice_google_account_summary">Sign in with your username &amp; password</string>
    <string name="restore_choice_android_device_label">A backup from an Android phone</string>
    <string name="restore_choice_android_device_summary">Use your old phone to copy data wirelessly</string>
    <string name="restore_choice_ios_device_label">An iPhone® device</string>
    <string name="migrate_from_ios_description">Follow these steps on your iPhone® device:</string>
    <string name="migrate_from_ios_instructions_1">1. Open Safari</string>
    <string name="migrate_from_ios_instructions_2">2. Go to <b>android.com/switch</b></string>
    <string name="migrate_from_ios_instructions_3">3. Follow the instructions</string>
    <string name="migrate_from_ios_header">Copy your data</string>
    <string name="ios_trademarks_disclaimer">iPhone, iPad, iOS, and iTunes are trademarks of Apple Inc., registered in the U.S. and other countries.</string>
</resources>