<?xml version="1.0" encoding="utf-8"?>
<com.android.setupwizardlib.GlifLayout android:icon="@drawable/ic_restore" android:id="@id/setup_wizard_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" app:suwHeaderText="@string/migrate_from_ios_header"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/SuwContentFrame">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/migrate_from_ios_description" style="@style/SuwDescription.Glif" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/migrate_from_ios_instructions_1" style="@style/SuwDescription.Glif" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/migrate_from_ios_instructions_2" style="@style/SuwDescription.Glif" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/migrate_from_ios_instructions_3" style="@style/SuwDescription.Glif" />
        <Button android:layout_gravity="end" android:id="@id/ios_next_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/suw_next_button_label" style="@android:style/Widget.Material.Button.Colored" />
        <Space android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ios_trademarks_disclaimer" style="@style/IosDisclaimer" />
    </LinearLayout>
</com.android.setupwizardlib.GlifLayout>